graded/tests/cage-netpol/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cage-netpol
policies:
- ../../policies/cage-netpol.yaml
resources:
- resources.yaml
results:
- policy: cage-netpol
  rule: cage-netpol
  kind: NetworkPolicy
  resources:
  - caged-restricted
  - caged-quarantine
  - caged-isolated
  generatedResource: generated-all.yaml
  result: pass
